dependencies/kelivo_secure_core/native/include/kelivo_secure_core.h

typedef int32_t KelivoStatus;
/*
 * 目标端在 Rust 内生成一次性 pairingId 与 raw secret，并绑定本机设备身份、
 * deviceId、keyVersion 和五分钟单调时钟截止点。固定 80 字节输出顺序为
 * pairingId16 || rawSecret32 || SHA256(rawSecret)32；raw secret 只用于生成二维码。
 */
KELIVO_CORE_API KelivoStatus kelivo_pending_pairing_start(
    uint64_t identity_handle,
    const uint8_t *target_device_id,
    size_t target_device_id_length,
    uint32_t target_key_version,
    uint64_t *out_pending_handle,
    uint8_t *out_material,
    size_t out_material_capacity,
    size_t *out_material_length);
/*
 * 将服务端创建响应绑定到本地 pending 句柄。返回的 pairingId、目标设备、
 * keyVersion 与两把目标公钥必须逐字节匹配本机材料；expiresAt 必须位于
 * (nowMs, nowMs+300000]，同一句柄只允许绑定一次。
 */
KELIVO_CORE_API KelivoStatus kelivo_pending_pairing_bind(
    uint64_t pending_handle,
    uint32_t protocol_version,
    const uint8_t *pairing_id,
    size_t pairing_id_length,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *target_device_id,
    size_t target_device_id_length,
    uint32_t target_key_version,
    const uint8_t *target_signing_public_key,
    size_t target_signing_public_key_length,
    const uint8_t *target_key_agreement_public_key,
    size_t target_key_agreement_public_key_length,
    uint64_t expires_at_ms,
    const uint8_t *challenge,
    size_t challenge_length,
    uint64_t now_ms);
KELIVO_CORE_API KelivoStatus kelivo_pending_pairing_handle_close(
    uint64_t pending_handle);
/*
 * 为规范 user_id 和正 key_epoch 生成 ARK，并直接注册为仅含该代次的账户绑定
 * 不透明密钥环句柄。不存在未绑定状态或原始字节导出接口；key_epoch=0 必须失败。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_root_key_generate(
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t key_epoch,
    uint64_t *out_handle);
/*
 * 使用句柄中指定且必须存在的 ARK 代次，对调用方提供的非空规范实体键执行
 * v1 域分离 keyed PRF，输出固定 16 字节不透明记录 ID，并设置 RFC 4122
 * UUIDv4/variant 位。实体键最长 2048 字节；原始 ARK 和完整 PRF 输出均不
 * 会通过 ABI 暴露。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_record_id_derive(
    uint64_t ark_handle,
    const uint8_t *canonical_entity_key,
    size_t canonical_entity_key_length,
    uint32_t key_epoch,
    uint8_t *out_record_id,
    size_t out_record_id_capacity,
    size_t *out_record_id_length);
/*
 * 从指定且必须存在的 ARK 代次派生账户信任根 Ed25519 验证钥。user_id 必须
 * 等于句柄固有账户；HKDF 固定绑定 user_id 与 key_epoch。成功只输出 32 字节
 * 公钥，原始 ARK 与 seed 不跨 ABI。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_trust_public_key_derive(
    uint64_t ark_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t key_epoch,
    uint8_t *out_public_key,
    size_t out_public_key_capacity,
    size_t *out_public_key_length);
/*
 * 对 1 至 65536 字节规范载荷签名。user_id 必须等于句柄固有账户；签名
 * transcript 固定绑定协议域、user_id、key_epoch 与载荷长度。成功固定输出
 * 64 字节，任何失败都清零可写输出。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_trust_payload_sign(
    uint64_t ark_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t key_epoch,
    const uint8_t *canonical_payload,
    size_t canonical_payload_length,
    uint8_t *out_signature,
    size_t out_signature_capacity,
    size_t *out_signature_length);
/*
 * 使用严格 Ed25519 语义验证规范载荷。public_key 必须由客户端从已认证 ARK
 * 本地派生；服务器随清单返回的裸公钥不得作为信任根。该函数不建立公钥信任。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_trust_payload_verify(
    const uint8_t *public_key,
    size_t public_key_length,
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t key_epoch,
    const uint8_t *canonical_payload,
    size_t canonical_payload_length,
    const uint8_t *signature,
    size_t signature_length);
KELIVO_CORE_API KelivoStatus kelivo_account_root_key_handle_close(
    uint64_t ark_handle);
/*
 * 将 source 单槽密钥环原子加入同账户 target 并设为当前代次。source 必须
 * 绑定同一 user_id，且仅含一个严格高于 target 当前值的代次；跨账户、重复、
 * 非递增、容量已满或任一句柄无效时，target 保持不变。两个句柄都继续有效，
 * ARK 原始字节不会跨越 ABI。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_root_keyring_add_epoch(
    uint64_t target_ark_handle,
    uint64_t source_ark_handle);
/*
 * 从密钥环原子移除指定旧代次。不得移除当前代次；代次不存在、为零或句柄
 * 无效时密钥环保持不变。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_root_keyring_prune_epoch(
    uint64_t ark_handle,
    uint32_t key_epoch);
/*
 * 签发设备将不透明 ARK 封装给任意目标设备。user_id 必须等于 ARK 句柄
 * 固有账户；签发公钥由 identity_handle 内部取得，调用方只提供目标公钥与
 * 完整可信绑定。成功固定输出 336 字节；其他验证失败将保持长度为零并清零
 * 可写输出，容量不足返回所需长度 336。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_root_key_envelope_seal(
    uint64_t issuer_identity_handle,
    uint64_t ark_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *issuer_device_id,
    size_t issuer_device_id_length,
    const uint8_t *target_device_id,
    size_t target_device_id_length,
    uint32_t key_epoch,
    const uint8_t *target_signing_public_key,
    size_t target_signing_public_key_length,
    const uint8_t *target_key_agreement_public_key,
    size_t target_key_agreement_public_key_length,
    uint8_t *out_envelope,
    size_t out_envelope_capacity,
    size_t *out_envelope_length);
/*
 * 目标 identity 使用调用方提供的预期账户、设备、epoch 与双方公钥先验证
 * 336 字节信封的签名和完整绑定，再开启为新的不透明 ARK 句柄。目标公钥
 * 必须与 identity_handle 一致；任何失败都将输出句柄保持为零。
 */
KELIVO_CORE_API KelivoStatus kelivo_account_root_key_envelope_open(
    uint64_t target_identity_handle,
    const uint8_t *envelope,
    size_t envelope_length,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *issuer_device_id,
    size_t issuer_device_id_length,
    const uint8_t *target_device_id,
    size_t target_device_id_length,
    uint32_t key_epoch,
    const uint8_t *issuer_signing_public_key,
    size_t issuer_signing_public_key_length,
    const uint8_t *issuer_key_agreement_public_key,
    size_t issuer_key_agreement_public_key_length,
    const uint8_t *target_signing_public_key,
    size_t target_signing_public_key_length,
    const uint8_t *target_key_agreement_public_key,
    size_t target_key_agreement_public_key_length,
    uint64_t *out_ark_handle);
/*
 * 对严格 80 字节 CredentialFinalization 生成 LoginFinish KDPF 签名。
 * 公钥从 identity_handle 内取得，主载荷摘要由 Rust 内部计算。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_login_proof_sign(
    uint64_t identity_handle,
    const uint8_t *attempt_id,
    size_t attempt_id_length,
    const uint8_t *account_context_id,
    size_t account_context_id_length,
    const uint8_t *device_id,
    size_t device_id_length,
    uint64_t expires_at_ms,
    const uint8_t *challenge,
    size_t challenge_length,
    const uint8_t *credential_finalization,
    size_t credential_finalization_length,
    uint8_t *out_signature,
    size_t out_signature_capacity,
    size_t *out_signature_length);
/*
 * 单次生成注册自 KAEK 与 RegistrationFinish KDPF，禁止 Dart 分别拼装。
 * 固定 400 字节输出顺序为 KAEK336 || signature64。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_registration_finish_create(
    uint64_t identity_handle,
    uint64_t ark_handle,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *device_id,
    size_t device_id_length,
    uint32_t key_epoch,
    const uint8_t *attempt_id,
    size_t attempt_id_length,
    const uint8_t *account_context_id,
    size_t account_context_id_length,
    uint64_t expires_at_ms,
    const uint8_t *challenge,
    size_t challenge_length,
    const uint8_t *registration_upload,
    size_t registration_upload_length,
    uint8_t *out_bundle,
    size_t out_bundle_capacity,
    size_t *out_bundle_length);
/*
 * 单次完成面向目标设备的 KAEK、PairingApprove KDPF 与 secret 派生认证器。
 * raw pairing secret 必须恰好 32 字节且不会进入输出；固定输出顺序为
 * KAEK336 || signature64 || authenticator32。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_pairing_approval_create(
    uint64_t identity_handle,
    uint64_t ark_handle,
    const uint8_t *pairing_id,
    size_t pairing_id_length,
    const uint8_t *user_id,
    size_t user_id_length,
    const uint8_t *issuer_device_id,
    size_t issuer_device_id_length,
    const uint8_t *target_device_id,
    size_t target_device_id_length,
    uint64_t expires_at_ms,
    const uint8_t *challenge,
    size_t challenge_length,
    uint32_t key_epoch,
    const uint8_t *target_signing_public_key,
    size_t target_signing_public_key_length,
    const uint8_t *target_key_agreement_public_key,
    size_t target_key_agreement_public_key_length,
    const uint8_t *pairing_secret,
    size_t pairing_secret_length,
    uint8_t *out_bundle,
    size_t out_bundle_capacity,
    size_t *out_bundle_length);
/*
 * 目标端深验证入口。pairingId、userId、目标设备、公钥、过期时间、challenge
 * 与 raw secret 均只从 pending_handle 读取；Dart 无法重新提供这些值。函数先
 * 验证墙钟与单调时钟，再验证 authenticator、KDPF、KAEK，最后解封 ARK。
 * 成功会原子消费并清零 pending，同时输出 ARK 句柄和 448 字节完整状态；
 * 认证失败会归还 pending 供重试，输出句柄与长度保持为零。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_pairing_approval_accept(
    uint64_t key_handle,
    uint64_t identity_handle,
    uint64_t pending_handle,
    uint64_t now_ms,
    const uint8_t *issuer_device_id,
    size_t issuer_device_id_length,
    uint32_t key_epoch,
    const uint8_t *issuer_signing_public_key,
    size_t issuer_signing_public_key_length,
    const uint8_t *issuer_key_agreement_public_key,
    size_t issuer_key_agreement_public_key_length,
    const uint8_t *signature,
    size_t signature_length,
    const uint8_t *authenticator,
    size_t authenticator_length,
    const uint8_t *envelope,
    size_t envelope_length,
    uint64_t *out_ark_handle,
    uint8_t *out_state_blob,
    size_t out_state_blob_capacity,
    size_t *out_state_blob_length);
/*
 * 使用平台槽位句柄密封单一设备状态。ark_handle=0 时必须同时使用空 user_id
 * 和 key_epoch=0，得到 identity-only 状态；完整态会一次认证地封装最多八个
 * ARK 代次，且 key_epoch 必须精确等于密钥环当前代次。
 */
KELIVO_CORE_API KelivoStatus kelivo_device_state_seal(
    uint64_t key_handle,
    uint64_t identity_handle,
    uint64_t ark_handle,
    const uint8_t *device_id,
    size_t device_id_length,
    uint32_t key_version,
    const uint8_t *user_id,
    size_t user_id_length,
    uint32_t key_epoch,
    uint8_t *out_blob,
    size_t out_blob_capacity,
    size_t *out_blob_length);