dependencies/kelivo_secure_core/lib/kelivo_secure_core_bindings_generated.dart


@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_pending_pairing_start(
  int identity_handle,
  ffi.Pointer<ffi.Uint8> target_device_id,
  int target_device_id_length,
  int target_key_version,
  ffi.Pointer<ffi.Uint64> out_pending_handle,
  ffi.Pointer<ffi.Uint8> out_material,
  int out_material_capacity,
  ffi.Pointer<ffi.Size> out_material_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
  )
>()
external int kelivo_pending_pairing_bind(
  int pending_handle,
  int protocol_version,
  ffi.Pointer<ffi.Uint8> pairing_id,
  int pairing_id_length,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> target_device_id,
  int target_device_id_length,
  int target_key_version,
  ffi.Pointer<ffi.Uint8> target_signing_public_key,
  int target_signing_public_key_length,
  ffi.Pointer<ffi.Uint8> target_key_agreement_public_key,
  int target_key_agreement_public_key_length,
  int expires_at_ms,
  ffi.Pointer<ffi.Uint8> challenge,
  int challenge_length,
  int now_ms,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_pending_pairing_handle_close(int pending_handle);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_account_root_key_generate(
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint64> out_handle,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_account_record_id_derive(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> canonical_entity_key,
  int canonical_entity_key_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> out_record_id,
  int out_record_id_capacity,
  ffi.Pointer<ffi.Size> out_record_id_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_account_trust_public_key_derive(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> out_public_key,
  int out_public_key_capacity,
  ffi.Pointer<ffi.Size> out_public_key_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_account_trust_payload_sign(
  int ark_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> canonical_payload,
  int canonical_payload_length,
  ffi.Pointer<ffi.Uint8> out_signature,
  int out_signature_capacity,
  ffi.Pointer<ffi.Size> out_signature_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external int kelivo_account_trust_payload_verify(
  ffi.Pointer<ffi.Uint8> public_key,
  int public_key_length,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> canonical_payload,
  int canonical_payload_length,
  ffi.Pointer<ffi.Uint8> signature,
  int signature_length,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64)>()
external int kelivo_account_root_key_handle_close(int ark_handle);

@ffi.Native<KelivoStatus Function(ffi.Uint64, ffi.Uint64)>()
external int kelivo_account_root_keyring_add_epoch(
  int target_ark_handle,
  int source_ark_handle,
);

@ffi.Native<KelivoStatus Function(ffi.Uint64, ffi.Uint32)>()
external int kelivo_account_root_keyring_prune_epoch(
  int ark_handle,
  int key_epoch,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_account_root_key_envelope_seal(
  int issuer_identity_handle,
  int ark_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> issuer_device_id,
  int issuer_device_id_length,
  ffi.Pointer<ffi.Uint8> target_device_id,
  int target_device_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> target_signing_public_key,
  int target_signing_public_key_length,
  ffi.Pointer<ffi.Uint8> target_key_agreement_public_key,
  int target_key_agreement_public_key_length,
  ffi.Pointer<ffi.Uint8> out_envelope,
  int out_envelope_capacity,
  ffi.Pointer<ffi.Size> out_envelope_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int kelivo_account_root_key_envelope_open(
  int target_identity_handle,
  ffi.Pointer<ffi.Uint8> envelope,
  int envelope_length,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> issuer_device_id,
  int issuer_device_id_length,
  ffi.Pointer<ffi.Uint8> target_device_id,
  int target_device_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> issuer_signing_public_key,
  int issuer_signing_public_key_length,
  ffi.Pointer<ffi.Uint8> issuer_key_agreement_public_key,
  int issuer_key_agreement_public_key_length,
  ffi.Pointer<ffi.Uint8> target_signing_public_key,
  int target_signing_public_key_length,
  ffi.Pointer<ffi.Uint8> target_key_agreement_public_key,
  int target_key_agreement_public_key_length,
  ffi.Pointer<ffi.Uint64> out_ark_handle,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_device_login_proof_sign(
  int identity_handle,
  ffi.Pointer<ffi.Uint8> attempt_id,
  int attempt_id_length,
  ffi.Pointer<ffi.Uint8> account_context_id,
  int account_context_id_length,
  ffi.Pointer<ffi.Uint8> device_id,
  int device_id_length,
  int expires_at_ms,
  ffi.Pointer<ffi.Uint8> challenge,
  int challenge_length,
  ffi.Pointer<ffi.Uint8> credential_finalization,
  int credential_finalization_length,
  ffi.Pointer<ffi.Uint8> out_signature,
  int out_signature_capacity,
  ffi.Pointer<ffi.Size> out_signature_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_device_registration_finish_create(
  int identity_handle,
  int ark_handle,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> device_id,
  int device_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> attempt_id,
  int attempt_id_length,
  ffi.Pointer<ffi.Uint8> account_context_id,
  int account_context_id_length,
  int expires_at_ms,
  ffi.Pointer<ffi.Uint8> challenge,
  int challenge_length,
  ffi.Pointer<ffi.Uint8> registration_upload,
  int registration_upload_length,
  ffi.Pointer<ffi.Uint8> out_bundle,
  int out_bundle_capacity,
  ffi.Pointer<ffi.Size> out_bundle_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_device_pairing_approval_create(
  int identity_handle,
  int ark_handle,
  ffi.Pointer<ffi.Uint8> pairing_id,
  int pairing_id_length,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  ffi.Pointer<ffi.Uint8> issuer_device_id,
  int issuer_device_id_length,
  ffi.Pointer<ffi.Uint8> target_device_id,
  int target_device_id_length,
  int expires_at_ms,
  ffi.Pointer<ffi.Uint8> challenge,
  int challenge_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> target_signing_public_key,
  int target_signing_public_key_length,
  ffi.Pointer<ffi.Uint8> target_key_agreement_public_key,
  int target_key_agreement_public_key_length,
  ffi.Pointer<ffi.Uint8> pairing_secret,
  int pairing_secret_length,
  ffi.Pointer<ffi.Uint8> out_bundle,
  int out_bundle_capacity,
  ffi.Pointer<ffi.Size> out_bundle_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_device_pairing_approval_accept(
  int key_handle,
  int identity_handle,
  int pending_handle,
  int now_ms,
  ffi.Pointer<ffi.Uint8> issuer_device_id,
  int issuer_device_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> issuer_signing_public_key,
  int issuer_signing_public_key_length,
  ffi.Pointer<ffi.Uint8> issuer_key_agreement_public_key,
  int issuer_key_agreement_public_key_length,
  ffi.Pointer<ffi.Uint8> signature,
  int signature_length,
  ffi.Pointer<ffi.Uint8> authenticator,
  int authenticator_length,
  ffi.Pointer<ffi.Uint8> envelope,
  int envelope_length,
  ffi.Pointer<ffi.Uint64> out_ark_handle,
  ffi.Pointer<ffi.Uint8> out_state_blob,
  int out_state_blob_capacity,
  ffi.Pointer<ffi.Size> out_state_blob_length,
);

@ffi.Native<
  KelivoStatus Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Size>,
  )
>()
external int kelivo_device_state_seal(
  int key_handle,
  int identity_handle,
  int ark_handle,
  ffi.Pointer<ffi.Uint8> device_id,
  int device_id_length,
  int key_version,
  ffi.Pointer<ffi.Uint8> user_id,
  int user_id_length,
  int key_epoch,
  ffi.Pointer<ffi.Uint8> out_blob,
  int out_blob_capacity,
  ffi.Pointer<ffi.Size> out_blob_length,
);
